--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,10 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    buildFeatures {
+        viewBinding = true
+    }
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.example.tamagotchitodo"
@@ -40,4 +43,5 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    implementation "androidx.recyclerview:recyclerview:1.2.1"
 }
